--- a/.github/workflows/man-update.yaml
+++ b/.github/workflows/man-update.yaml
@@ -22,8 +22,8 @@ jobs:
       #   submodules: recursive
     - name: Build man pages
       run: make man
-    - uses: stefanzweifel/git-auto-commit-action@v4
-      name: Commit
-      with:
-        commit_message: "[gha] build man pages"
-        commit_author: Mihai Fufezan <fufexan@protonmail.com>
+
+  push:
+    uses: ./.github/workflows/commit.yml
+    with:
+      message: "[gha] build man pages"
